--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.14",
     "aos": "^2.3.4",
     "firebase": "^9.0.2",
+    "git-commit-msg-linter": "^3.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
