--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "git-commit-msg-linter": "^3.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
