--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
