--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.14",
     "aos": "^2.3.4",
+    "postcss": "7",
     "firebase": "^9.0.2",
     "firebase-tools": "^9.21.0",
     "git-commit-msg-linter": "^3.2.8",
