--- a/package.json
+++ b/package.json
@@ -3,20 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/aos": "^3.0.4",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.14",
     "aos": "^2.3.4",
     "postcss": "7",
-    "firebase": "^9.0.2",
-    "firebase-tools": "^9.21.0",
+    "firebase": "^11.9.1",
     "git-commit-msg-linter": "^3.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +16,19 @@
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/aos": "^3.0.4",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.14",
+    "firebase-tools": "^14.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
