--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ryan-basque-portifolio",
+  "name": "ryan-basque-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,8 +31,8 @@
     "firebase-tools": "^14.5.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
